--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Testing 123
+Future home of CSS Cookbook, 3rd Edition code examples. Pardon the dust!
+
+Christopher Schmitt
+http://christopherschmitt.com/
